--- a/pom.xml
+++ b/pom.xml
@@ -37,5 +37,12 @@
 	  <artifactId>guava</artifactId>
 	  <version>26.0-jre</version>
 	</dependency>
+	
+	<dependency>
+	  <groupId>junit</groupId>
+	  <artifactId>junit</artifactId>
+	  <version>4.12</version>
+	  <scope>test</scope>
+	</dependency>
     
 </project>
