--- a/.classpath
+++ b/.classpath
@@ -18,6 +18,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="var" path="JUNIT_PATH/junit/3.8.2/junit-3.8.2.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
